# internal/controllers/user_controller.go
@@ -540,7 +540,7 @@ var opaqueInternalError = fiber.NewError(fiber.StatusInternalServerError, "Inter
 // @Success 200 {object} controllers.ChallengeResponse
 // @Failure 400 {object} controllers.ErrorResponse
 // @Failure 500 {object} controllers.ErrorResponse
-// @Router /v1/user/web3/generate-challenge [post]
+// @Router /v1/user/web3/challenge/generate [post]
 func (d *UserController) GenerateEthereumChallenge(c *fiber.Ctx) error {
 	userID := getUserID(c)
 
@@ -594,7 +594,7 @@ type ConfirmEthereumRequest struct {
 // @Success 204
 // @Failure 400 {object} controllers.ErrorResponse
 // @Failure 500 {object} controllers.ErrorResponse
-// @Router /v1/user/web3/submit-challenge [post]
+// @Router /v1/user/web3/challenge/submit [post]
 func (d *UserController) SubmitEthereumChallenge(c *fiber.Ctx) error {
 	userID := getUserID(c)
 
